--- a/bs/013_task.html
+++ b/bs/013_task.html
@@ -12,13 +12,14 @@
 
     <div class="container">
         <div class="row">
-            <div class="col-sm-6 offset-sm-3">
-                <div class="card">
-                    <div class="card-header" data-bs-toggle="collapse" data-bs-target="#c1">header</div>
-                    <div class="collapse" id="c1">
-                        <div class="card-body">body</div>
-                    </div>
-                </div>
+            <div class="col-sm-6 col-md-12 col-lg-6">
+                <div class="alert alert-success">success</div>
+            </div>
+            <div class="col-sm-6 col-md-6 col-lg-3">
+                <div class="alert alert-danger">danger</div>
+            </div>
+            <div class="col-sm-12 col-md-6 col-lg-3">
+                <div class="alert alert-warning">warning</div>
             </div>
         </div>
     </div>
